19990728-01:10 EDT Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/gtapi.c
     * minor correction in case of inverted coordinates

19990728-05:40 CET Victor Szel <info@szelvesz.hu>
   ! source/compiler/harbour.y/MakeFilename() - 
     Fixed bug, which sometimes caused that the
     filename losed the "." extension separator char.
   ! tests/working/makefile - newcopy.prg removed.
   + tests/working/strsub.prg - Added some more tests, and the
     expected results.
   ! source/vm/hvm.c - Minus() simplified and fixed for strings.
   ! config/dos/djgpp.cf - Added -g to CFLAGS, so it's
     able to make test programs.

19990728-03:50 CET Victor Szel <info@szelvesz.hu>
   ! config/win32/msvc.cf - Missing include added.

19990727-16:30 EDT David G. Holm <dholm@jsd-llc.com>
  * source/rtl/dir.c
    + Added support for IBM Visual Age C++ compiler
  * source/rtl/gt/gtos2.c
    ! Corrected function declration for gtSetAttribute()
  * tests/working/dirtest.prg
    * Changed QOUT() to OUTSTD() to allow the directory listing to be
      redirected, regardless of whether or not the GT API is linked in

19990727-22:20 CET Victor Szel <info@szelvesz.hu>
   + tests/broken/lnlenli1.prg
   + tests/broken/lnlenli2.prg
     Test programs added to test how Harbour handles extremly long lines.
   ! tests/broken/vec2.prg
     Added RCS line.

19990727-21:00 CET Victor Szel <info@szelvesz.hu>
   + source/compiler/harbour.y - Help screen updated.
     /a,/v added /t deleted, made it even more Clipper like.
     original Clipper typo "supress" fixed.

19990727-20:15 GMT+2 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.y
         * static variables can be initialized using the codeblocks
          that calls functions. However static variables still cannot
          be initialized with direct function call.
         * changed the symbol created for function that initialize
          static variable to: '(_INITSTATICS)' and generated function is