@@ -35,52 +35,49 @@
 #include <stdio.h>
 #include "hbpp.h"
 
-int koldef = 42;
-DEFINES aDefines[] =
-{
- {"__HARBOUR__",NULL,-1,"" },
- {"_SET_ALTERNATE",NULL,-1,"1"},
- {"_SET_ALTFILE",NULL,-1,"2"},
- {"_SET_BELL",NULL,-1,"3"},
- {"_SET_CANCEL",NULL,-1,"4"},
- {"_SET_COLOR",NULL,-1,"5"},
- {"_SET_CONFIRM",NULL,-1,"6"},
- {"_SET_CONSOLE",NULL,-1,"7"},
- {"_SET_CURSOR",NULL,-1,"8"},
- {"_SET_DATEFORMAT",NULL,-1,"9"},
- {"_SET_DEBUG",NULL,-1,"10"},
- {"_SET_DECIMALS",NULL,-1,"11"},
- {"_SET_DEFAULT",NULL,-1,"12"},
- {"_SET_DELETED",NULL,-1,"13"},
- {"_SET_DELIMCHARS",NULL,-1,"14"},
- {"_SET_DELIMITERS",NULL,-1,"15"},
- {"_SET_DEVICE",NULL,-1,"16"},
- {"_SET_EPOCH",NULL,-1,"17"},
- {"_SET_ESCAPE",NULL,-1,"18"},
- {"_SET_EVENTMASK",NULL,-1,"19"},
- {"_SET_EXACT",NULL,-1,"20"},
- {"_SET_EXCLUSIVE",NULL,-1,"21"},
- {"_SET_EXIT",NULL,-1,"22"},
- {"_SET_EXTRA",NULL,-1,"23"},
- {"_SET_EXTRAFILE",NULL,-1,"24"},
- {"_SET_FIXED",NULL,-1,"25"},
- {"_SET_INSERT",NULL,-1,"26"},
- {"_SET_INTENSITY",NULL,-1,"27"},
- {"_SET_MARGIN",NULL,-1,"28"},
- {"_SET_MCENTER",NULL,-1,"29"},
- {"_SET_MESSAGE",NULL,-1,"30"},
- {"_SET_PATH",NULL,-1,"31"},
- {"_SET_PRINTER",NULL,-1,"32"},
- {"_SET_PRINTFILE",NULL,-1,"33"},
- {"_SET_SCOREBOARD",NULL,-1,"34"},
- {"_SET_SCROLLBREAK",NULL,-1,"35"},
- {"_SET_SOFTSEEK",NULL,-1,"36"},
- {"_SET_TYPEAHEAD",NULL,-1,"37"},
- {"_SET_UNIQUE",NULL,-1,"38"},
- {"_SET_WRAP",NULL,-1,"39"},
- {"_SET_CH",NULL,-1,NULL},
- {"_DFSET","x,y",2,"Set( _SET_DATEFORMAT, if(__SetCentury(), x, y) )"}
-};
+   static DEFINES sD___01 = {"__HARBOUR__",NULL,-1,"", NULL };
+   static DEFINES sD___02 =  {"_SET_ALTERNATE",NULL,-1,"1", &sD___01 };
+   static DEFINES sD___03 =  {"_SET_ALTFILE",NULL,-1,"2", &sD___02 };
+   static DEFINES sD___04 =  {"_SET_BELL",NULL,-1,"3", &sD___03 };
+   static DEFINES sD___05 =  {"_SET_CANCEL",NULL,-1,"4", &sD___04 };
+   static DEFINES sD___06 =  {"_SET_COLOR",NULL,-1,"5", &sD___05 };
+   static DEFINES sD___07 =  {"_SET_CONFIRM",NULL,-1,"6", &sD___06 };
+   static DEFINES sD___08 =  {"_SET_CONSOLE",NULL,-1,"7", &sD___07 };
+   static DEFINES sD___09 =  {"_SET_CURSOR",NULL,-1,"8", &sD___08 };
+   static DEFINES sD___10 =  {"_SET_DATEFORMAT",NULL,-1,"9", &sD___09 };
+   static DEFINES sD___11 =  {"_SET_DEBUG",NULL,-1,"10", &sD___10 };
+   static DEFINES sD___12 =  {"_SET_DECIMALS",NULL,-1,"11", &sD___11 };
+   static DEFINES sD___13 =  {"_SET_DEFAULT",NULL,-1,"12", &sD___12 };
+   static DEFINES sD___14 =  {"_SET_DELETED",NULL,-1,"13", &sD___13 };
+   static DEFINES sD___15 =  {"_SET_DELIMCHARS",NULL,-1,"14", &sD___14 };
+   static DEFINES sD___16 =  {"_SET_DELIMITERS",NULL,-1,"15", &sD___15 };
+   static DEFINES sD___17 =  {"_SET_DEVICE",NULL,-1,"16", &sD___16 };
+   static DEFINES sD___18 =  {"_SET_EPOCH",NULL,-1,"17", &sD___17 };
+   static DEFINES sD___19 =  {"_SET_ESCAPE",NULL,-1,"18", &sD___18 };
+   static DEFINES sD___20 =  {"_SET_EVENTMASK",NULL,-1,"19", &sD___19 };
+   static DEFINES sD___21 =  {"_SET_EXACT",NULL,-1,"20", &sD___20 };
+   static DEFINES sD___22 =  {"_SET_EXCLUSIVE",NULL,-1,"21", &sD___21 };
+   static DEFINES sD___23 =  {"_SET_EXIT",NULL,-1,"22", &sD___22 };
+   static DEFINES sD___24 =  {"_SET_EXTRA",NULL,-1,"23", &sD___23 };
+   static DEFINES sD___25 =  {"_SET_EXTRAFILE",NULL,-1,"24", &sD___24 };
+   static DEFINES sD___26 =  {"_SET_FIXED",NULL,-1,"25", &sD___25 };
+   static DEFINES sD___27 =  {"_SET_INSERT",NULL,-1,"26", &sD___26 };
+   static DEFINES sD___28 =  {"_SET_INTENSITY",NULL,-1,"27", &sD___27 };
+   static DEFINES sD___29 =  {"_SET_MARGIN",NULL,-1,"28", &sD___28 };
+   static DEFINES sD___30 =  {"_SET_MCENTER",NULL,-1,"29", &sD___29 };
+   static DEFINES sD___31 =  {"_SET_MESSAGE",NULL,-1,"30", &sD___30 };
+   static DEFINES sD___32 =  {"_SET_PATH",NULL,-1,"31", &sD___31 };
+   static DEFINES sD___33 =  {"_SET_PRINTER",NULL,-1,"32", &sD___32 };
+   static DEFINES sD___34 =  {"_SET_PRINTFILE",NULL,-1,"33", &sD___33 };
+   static DEFINES sD___35 =  {"_SET_SCOREBOARD",NULL,-1,"34", &sD___34 };
+   static DEFINES sD___36 =  {"_SET_SCROLLBREAK",NULL,-1,"35", &sD___35 };
+   static DEFINES sD___37 =  {"_SET_SOFTSEEK",NULL,-1,"36", &sD___36 };
+   static DEFINES sD___38 =  {"_SET_TYPEAHEAD",NULL,-1,"37", &sD___37 };
+   static DEFINES sD___39 =  {"_SET_UNIQUE",NULL,-1,"38", &sD___38 };
+   static DEFINES sD___40 =  {"_SET_WRAP",NULL,-1,"39", &sD___39 };
+   static DEFINES sD___41 =  {"_SET_CH",NULL,-1,NULL, &sD___40 };
+   static DEFINES sD___42 =  {"_DFSET","x,y",2,"Set( _SET_DATEFORMAT, if(__SetCentury(), x, y) )", &sD___41 };
+   DEFINES *topDefine = &sD___42;
 
 int kolcomm = 239;
 COMMANDS aCommands[] =
